--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 		<div class="container1">
 			
-			<video id="about" style="width:100%;" src='https://res.cloudinary.com/castell/video/upload/v1566081103/pointsLoop.mp4' autoplay loop muted></video>
+			<video id="about" style="width:100%;" src='./assets/pointsLoop.mp4' autoplay loop muted></video>
 			<h3 class="centered1">WELCOME TO B-Wallet</h3>
 				 <h1 class="centered2" ><b>暗号資産を財布の中に</b></h1>
 			<p class="centered3">ビットコインを安全に持ち歩こう</p>
